feat: 更新激活码管理模块的API基础地址，优化测试页面说明

--- a/激活码管理模块使用文档.md
+++ b/激活码管理模块使用文档.md
@@ -107,22 +107,26 @@ src/
 在 `src/utils/activation-codes-api.ts` 中配置：
 
 ```typescript
-// 默认使用相对路径 /api
-const activationCodeApi = new ActivationCodeApiClient('/api')
+// 默认使用 LACS API 服务器
+const activationCodeApi = new ActivationCodeApiClient('https://api-g.lacs.cc/api')
 
-// 或指定完整的API地址
+// 或指定其他API地址
 const activationCodeApi = new ActivationCodeApiClient('https://your-api-domain.com/api')
 ```
 
+**当前配置**: 系统已配置为使用 `https://api-g.lacs.cc/api` 作为激活码API的基础地址。
+
 ### 支持的 API 端点
 
-- `GET /api/activation-codes` - 获取激活码列表
-- `POST /api/activation-codes` - 创建新激活码
-- `GET /api/activation-codes/[id]` - 获取激活码详情
-- `DELETE /api/activation-codes/[id]` - 删除激活码
-- `POST /api/activation-codes/verify` - 验证激活码
-- `GET /api/activation-codes/stats` - 获取统计信息
-- `POST /api/activation-codes/cleanup` - 清理过期激活码
+基础地址: `https://api-g.lacs.cc/api`
+
+- `GET https://api-g.lacs.cc/api/activation-codes` - 获取激活码列表
+- `POST https://api-g.lacs.cc/api/activation-codes` - 创建新激活码
+- `GET https://api-g.lacs.cc/api/activation-codes/[id]` - 获取激活码详情
+- `DELETE https://api-g.lacs.cc/api/activation-codes/[id]` - 删除激活码
+- `POST https://api-g.lacs.cc/api/activation-codes/verify` - 验证激活码
+- `GET https://api-g.lacs.cc/api/activation-codes/stats` - 获取统计信息
+- `POST https://api-g.lacs.cc/api/activation-codes/cleanup` - 清理过期激活码
 
 ## 错误处理
 
