--- a/激活码管理模块实现总结.md
+++ b/激活码管理模块实现总结.md
@@ -54,13 +54,15 @@ src/
 ## API 集成
 
 ### 🔗 支持的API端点
-- `POST /api/activation-codes` - 生成激活码
-- `POST /api/activation-codes/verify` - 验证激活码
-- `GET /api/activation-codes` - 获取激活码列表
-- `GET /api/activation-codes/[id]` - 获取激活码详情
-- `DELETE /api/activation-codes/[id]` - 删除激活码
-- `GET /api/activation-codes/stats` - 获取统计信息
-- `POST /api/activation-codes/cleanup` - 清理过期激活码
+**基础地址**: `https://api-g.lacs.cc/api`
+
+- `POST https://api-g.lacs.cc/api/activation-codes` - 生成激活码
+- `POST https://api-g.lacs.cc/api/activation-codes/verify` - 验证激活码
+- `GET https://api-g.lacs.cc/api/activation-codes` - 获取激活码列表
+- `GET https://api-g.lacs.cc/api/activation-codes/[id]` - 获取激活码详情
+- `DELETE https://api-g.lacs.cc/api/activation-codes/[id]` - 删除激活码
+- `GET https://api-g.lacs.cc/api/activation-codes/stats` - 获取统计信息
+- `POST https://api-g.lacs.cc/api/activation-codes/cleanup` - 清理过期激活码
 
 ### 🛡️ 错误处理
 - 统一的错误响应格式处理
@@ -159,9 +161,9 @@ src/
 5. 查看统计分析了解使用情况
 
 ### 🔧 配置说明
-- API基础地址配置在 `src/utils/activation-codes-api.ts`
-- 主题配置在 `src/app/layout.tsx`
-- 导航菜单配置在 `src/components/Navigation.tsx`
+- **API基础地址**: `https://api-g.lacs.cc/api` (配置在 `src/utils/activation-codes-api.ts`)
+- **主题配置**: `src/app/layout.tsx`
+- **导航菜单**: `src/components/Navigation.tsx`
 
 ## 后续优化建议
 
