--- a/激活码管理模块使用文档.md
+++ b/激活码管理模块使用文档.md
@@ -104,29 +104,40 @@ src/
 
 ### 配置 API 基础地址
 
-在 `src/utils/activation-codes-api.ts` 中配置：
+系统使用Next.js的重写规则将API请求转发到外部服务器：
 
+**1. Next.js配置** (`next.config.ts`):
 ```typescript
-// 默认使用 LACS API 服务器
-const activationCodeApi = new ActivationCodeApiClient('https://api-g.lacs.cc/api')
-
-// 或指定其他API地址
-const activationCodeApi = new ActivationCodeApiClient('https://your-api-domain.com/api')
+async rewrites() {
+  return [
+    {
+      source: '/api/activation-codes/:path*',
+      destination: 'https://api-g.lacs.cc/api/activation-codes/:path*',
+    },
+  ];
+}
 ```
 
-**当前配置**: 系统已配置为使用 `https://api-g.lacs.cc/api` 作为激活码API的基础地址。
+**2. API工具类配置** (`src/utils/activation-codes-api.ts`):
+```typescript
+// 使用相对路径，由Next.js重写规则转发到外部API
+const activationCodeApi = new ActivationCodeApiClient('/api')
+```
+
+**当前配置**: 系统通过Next.js重写规则将 `/api/activation-codes/*` 请求转发到 `https://api-g.lacs.cc/api/activation-codes/*`。
 
 ### 支持的 API 端点
 
-基础地址: `https://api-g.lacs.cc/api`
+**前端请求路径** (通过Next.js重写规则转发):
+- `GET /api/activation-codes` → `https://api-g.lacs.cc/api/activation-codes`
+- `POST /api/activation-codes` → `https://api-g.lacs.cc/api/activation-codes`
+- `GET /api/activation-codes/[id]` → `https://api-g.lacs.cc/api/activation-codes/[id]`
+- `DELETE /api/activation-codes/[id]` → `https://api-g.lacs.cc/api/activation-codes/[id]`
+- `POST /api/activation-codes/verify` → `https://api-g.lacs.cc/api/activation-codes/verify`
+- `GET /api/activation-codes/stats` → `https://api-g.lacs.cc/api/activation-codes/stats`
+- `POST /api/activation-codes/cleanup` → `https://api-g.lacs.cc/api/activation-codes/cleanup`
 
-- `GET https://api-g.lacs.cc/api/activation-codes` - 获取激活码列表
-- `POST https://api-g.lacs.cc/api/activation-codes` - 创建新激活码
-- `GET https://api-g.lacs.cc/api/activation-codes/[id]` - 获取激活码详情
-- `DELETE https://api-g.lacs.cc/api/activation-codes/[id]` - 删除激活码
-- `POST https://api-g.lacs.cc/api/activation-codes/verify` - 验证激活码
-- `GET https://api-g.lacs.cc/api/activation-codes/stats` - 获取统计信息
-- `POST https://api-g.lacs.cc/api/activation-codes/cleanup` - 清理过期激活码
+**实际后端地址**: `https://api-g.lacs.cc/api`
 
 ## 错误处理
 
