--- a/激活码管理模块实现总结.md
+++ b/激活码管理模块实现总结.md
@@ -64,6 +64,8 @@ src/
 - `GET https://api-g.lacs.cc/api/activation-codes/stats` - 获取统计信息
 - `POST https://api-g.lacs.cc/api/activation-codes/cleanup` - 清理过期激活码
 
+**CORS配置**: 前端直接调用外部API，需要API服务器配置正确的CORS头。
+
 ### 🛡️ 错误处理
 - 统一的错误响应格式处理
 - 网络错误自动重试
@@ -162,6 +164,7 @@ src/
 
 ### 🔧 配置说明
 - **API基础地址**: `https://api-g.lacs.cc/api` (配置在 `src/utils/activation-codes-api.ts`)
+- **CORS测试页面**: `/cors-test` - 用于测试跨域请求是否正常
 - **主题配置**: `src/app/layout.tsx`
 - **导航菜单**: `src/components/Navigation.tsx`
 
